--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gitflow under control</title>
+    <p>git is a useful tool, which helps us to control versions</p>
+    <p>But its main utility is in collaborative work</p>
 </head>
 <body>
     
