--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Gitflow under control</title>
 </head>
 <body>
-    <p>git is a useful tool, which helps us to control versions</p>
-    <p>But its main utility is in collaborative work</p>
-    
+    <h2>feature/footer</h2>
 </body>
 </html>
